...
            style={{ flex: 1 }}
          >
            {title}
          </Copy>
          <IconButton
            name="xmark"
            label="Lukk"
            size={15}
            weight="semibold"
            filled
            disabled={!dismissible}
            color={colors.text}
            onPress={onClose}
...
