appId: no.tolnes.kvitto
name: Delete one receipt and retain the other household receipts
---
- runFlow: receipts.yaml
- tapOn: "Flere handlinger"
- tapOn: "Slett kvittering"
- assertVisible: "Slette kvitteringen[?]"
- tapOn: "Slett"
- extendedWaitUntil:
    visible: "Kvitteringer"
    timeout: 30000
- assertVisible: "KIWI.*"
- assertVisible: "Coop Extra.*"
- assertNotVisible: "REMA 1000.*"
- stopApp
- launchApp
- extendedWaitUntil:
    visible: "Kvitteringer"
    timeout: 30000
- tapOn: "Kvitteringer"
- assertVisible: "KIWI.*"
- assertVisible: "Coop Extra.*"
- assertNotVisible: "REMA 1000.*"
- tapOn: "KIWI.*"
- scrollUntilVisible:
    element: "Rediger EVERGOOD KAFFE,.*"
- assertVisible: ".*69,90.*"
